fix checkbox position on mobile

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ textarea {
 }
 
 label {
+  padding: 0 0.5rem 0 1.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -136,6 +137,9 @@ button:hover::after {
 @media (min-width: 520px) {
   h1 {
     text-align: center;
+  }
+  label {
+    padding: 0;
   }
 }
 
